...
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_search_edit_text"/>

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextSearch"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
...
